# Rotating_ASCII_Cube

./: CMakeLists.txt  makefile
debug/: CMakeCache.txt  Makefile  RAC  cmake_install.cmake  compile_commands.json  data.csv  plot.py
debug/.cache/clangd/index/: OSByteOrder.h.5AF4E2B7D602FD60.idx  _symbol_aliasing.h.E69EC762E2516098.idx  _types.h.20F8B83DA616C9A1.idx  main.c.0779C6F0BCB459B0.idx  main.c.4A54AE499F0296DC.idx  point.c.19A5D561F5B7AC91.idx  point.c.57C12C1B2566F457.idx  point.h.008DA416D6ACA48D.idx  point.h.00BD4553A9EAEA38.idx  resource.h.D2EF137865BD1697.idx  stdint.h.7BD9F115497BEB01.idx  stdio.h.36ECA2A508A94EF7.idx  transform.c.0EC3FA4E54A0ADBB.idx  transform.c.38C93CB4C1257461.idx  transform.h.6826ABB92400A510.idx  transform.h.8574033B34935C94.idx  vector.c.BED072E35DF5A1B3.idx  vector.c.EA4B9D3C51FF6D0D.idx  vector.h.29FFE9402191F9B6.idx  vector.h.4B33D450B60563A1.idx
debug/src/: Makefile  cmake_install.cmake
include/: matrix.h  transform.h
libs/: libpoints.dylib  libtransforms.dylib  libvectors.dylib
release/: CMakeCache.txt  Makefile  RAC  cmake_install.cmake  compile_commands.json
release/src/: Makefile  cmake_install.cmake
src/: .CMakeLists.txt.swp  .main.c.swp  .vector.c.swp  .vector.h.swp  CMakeLists.txt  main.c  point.c  point.h  transform.c  transform.h  vector.h
src/renderer/: a.out  learning_xlib.c  makefile
